abstract class Expression {
  bool interpret(Map<String, bool> context);
}